@@ -2,6 +2,7 @@ ncmpc 0.50 - not yet released
 * build: require Meson 0.60
 * require libfmt 9
 * draw progress bar as Unicode double line
+* add color style "text" for input text controls
 * lyrics/musixmatch: add new lyrics extension
 * lyrics/google: fix partial loading of lyrics
 
